# sonic_rules

./: .gitignore  .gitmodules  BUILD  MODULE.bazel  shared_library.bzl  sonic_deb.bzl
config/: BUILD.bazel  arch.bzl
cpio/: BUILD.bazel  generated.patch
disk_image/: BUILD.bazel  disk_image.bzl  onie_iso_extract.bzl  onie_iso_extract.sh  sonic_disk_image.sh  tar_reprefix.py
disk_image/tests/: BUILD.bazel  verify_image.sh
dockerfs/: BUILD.bazel  build_store.sh  defs.bzl  overlay2_build.py
dockerfs/tests/: BUILD.bazel  dockerd_load_test.sh  store_test.sh
e2fsprogs_test/: BUILD.bazel  mke2fs_test.sh
gdisk_test/: BUILD.bazel  sgdisk_test.sh
grub/: BUILD.bazel  build_platform_imgs.sh  grub-bios-setup-no-mountinfo.patch
initramfs/: BUILD.bazel  defs.bzl  mkinitramfs_build.sh  most_modules.sh
initramfs/tests/: BUILD.bazel  initrd_test.sh
jinja2/: BUILD.bazel  pyproject.toml  render.py
jinja2/tests/: BUILD.bazel  fixture.j2
kernel/: BUILD.bazel  debian_docs.bzl  debian_kernel_config.bzl  debian_kernel_sources.bzl  defs.bzl  extract.bzl  headers_deb.bzl  host_tools.bzl  image_scripts.bzl  kernel_build.bzl  kernel_debs_dist.bzl  kernel_inputs.bzl  kernel_sources.BUILD.tpl  manage_config.bzl  providers.bzl  toolchain_gcc.bzl
kernel/tools/: BUILD.bazel
kernel_host_tools/: BUILD.bazel
make/: BUILD.bazel  config_h.patch
oci/: whiteout.bzl
onie_installer/: BUILD.bazel  defs.bzl  image.bzl  onie_mk.sh
onie_installer/tests/: BUILD.bazel  bin_test.sh  fixture_install.sh  payload_test.sh  subst_test.sh
onie_installer/tests/smoke/: BUILD.bazel
platform/: BUILD.bazel
popt_test/: BUILD.bazel  popt_link_test.c
proto/: extract_proto_headers.bzl
protobuf/: BUILD.bazel
pyang/: BUILD.bazel  pkg_resources.py  pyang_main.py  pyproject.toml
python/: BUILD.bazel  site_packages.bzl  sync_python_version.py  version.bzl
registry/: bazel_registry.json
registry/modules/gazelle/: metadata.json
registry/modules/gazelle/0.47.0/: MODULE.bazel  source.json
registry/modules/gazelle/0.47.0/patches/: 0001_go_module_download_via_bazel_cache.patch
registry/modules/rules_go/0.60.0.sonic-patched/: source.json
registry/modules/rules_go/0.60.0.sonic-patched/patches/: 0004_add_idirafter_B_rpath_link_to_cgoAbsEnvFlags.patch
registry/modules/rules_thrift/0.0.0/: MODULE.bazel  source.json
registry/modules/sonic-build-infra/0.0.0/: source.json
rootfs/: BUILD.bazel  defs.bzl
rootfs/tests/: BUILD.bazel  stub_rootfs_test.sh
rules_thrift/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  thrift.BUILD  thrift.bzl  thrift_toolchain.bzl
rules_thrift/tests/: BUILD.bazel  sample.thrift
shared_library/: shared_library.bzl
sonic_deb/: BUILD.bazel  md5sums_from_tar.py  sonic_deb.bzl
sonic_deb/tests/: BUILD.bazel  sonic_deb_unit_test.bzl  test_deb_content.sh  test_lib.c  test_lib.h  test_main.c  test_shared_lib_deb.sh  test_toolchain.bzl  test_toolchain_access.bzl
sonic_http_archive/: BUILD.bazel  sonic_http_archive.bzl
squashfs/: defs.bzl
squashfs/tests/: BUILD.bazel  squashfs_test.sh
squashfs/tools/: BUILD.bazel  mksquashfs_test.sh
swig/: add_lib_go.patch  gen.bzl
system_libs/: BUILD.bazel
systemd/: BUILD.bazel  defs.bzl  enable.py
systemd/tests/: BUILD.bazel  enable_test.sh  ssh.service
tar/: BUILD.bazel  assert_tar.bzl
toolchains/args/: BUILD.bazel
toolchains/gcc/: BUILD.bazel  defs.bzl  gcc.BUILD  gcc.bzl
toolchains/gcc/args/: BUILD.bazel
toolchains/gcc/tools/: BUILD.bazel
